<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#324B4D"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/masuk"
        android:textColor="#F3F3F3"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:alpha="0.4"
        android:background="@drawable/form"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:alpha="0.4"
        android:background="@drawable/form"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/buttonlogin"
        android:text="@string/masukButton"
        android:layout_gravity="center"
        android:textColor="#F3F3F3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"
        android:textColor="#D9DFE0"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:text="@string/register" />

</LinearLayout>