<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailProfileActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="2dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@mipmap/back"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif"
            android:text="Kembali"
            android:textColor="#000"
            android:textSize="17sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="310dp"
            android:text="Simpan"
            android:fontFamily="sans-serif"
            android:textColor="#000"
            android:textSize="17sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="135dp"
            android:text="Detail Akun"
            android:fontFamily="sans-serif-black"
            android:textColor="#000"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="201dp"
            android:layout_height="118dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="110dp"
            android:src="@drawable/foto_profil"
            android:contentDescription="TODO" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="275dp"
        android:orientation="vertical"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/nama_lengkap"
                android:textColor="#324B4D"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:hint="@string/nama"
                android:paddingTop="5dp"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#94B0B2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/email1"
                android:textColor="#324B4D"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:hint="@string/cth_email"
                android:paddingTop="5dp"
                android:textColorHint="@color/black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#94B0B2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="NO HP"
                android:textColor="#324B4D"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:hint="@string/no_hp"
                android:paddingTop="5dp"
                android:textColorHint="@color/black"
                android:inputType="TODO"
                android:importantForAutofill="no" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#94B0B2" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>